2003.01.02  Earnie Boyd  <earnie@users.sf.net>

	* var/DTK/share.dat: Add missing autoconf, automake and libtool
	directories.

2002.12.18  Earnie Boyd  <earnie@users.sf.net>

	* bin/which: New file.
	* var/msys/script.dat: Add which.

2002.12.09  Earnie Boyd  <earnie@users.sf.net>

	* doc/msys/MSYS-1.0.8-changes.rtf: Add note about texinfo 4.3 package.
	Be more specific for "Future Plans".

2002.12.02  Earnie boyd  <earnie@users.sf.net>

	* doc/msys/README.rtf: Corrections to use of clipboard section.

2002.11.26  Earnie Boyd  <earnie@users.sf.net>

	* doc/msys/README.rtf: Add notes about use of clipboard.
	* doc/msys/MSYS-1.0.8-changes.rtf: Add note about msys.bat changes.

2002.11.25  Earnie Boyd  <earnie@users.sf.net>

	* bin/msys.bat: Modify to allow automatic expansion of environment
	space for Win98 and WinME.
	Many thanks to Randy Sims, Paul Garceau and Luke Dunstan.

2002.08.10  Earnie Boyd  <earnie@users.sf.net>

	* script/msysrls.sh: Fix bug with msys.iss creation.
	* script/msysDTKrls.sh: New file.

2002.08.01  Earnie Boyd  <earnie@users.sf.net>

	* pm: New Directory.
	* var/DTK: Ditto.
	* var/DVLPR: Ditto.
	* var/DTK/exe.dat: New File.
	* var/DTK/dll.dat: Ditto.
	* pm/msysDTK.pm: Ditto.

2002.05.17  Earnie Boyd  <earnie@users.sf.net>

	* bin/lnkcnv: New file.
	* var/script.dat: Add lnkcnv.
	* script/msysrls.sh: Set directory defaults to something more generic.
	* postinstall/pi.sh: Modify the check for ftp.exe and the script ftp.
	* msys.packages: New file.

2002.05.15  Earnie Boyd  <earnie@users.sf.net>

	* script/msysrls.sh: Define value of RELEASE variable.
	Filter documents through sed to substitute @VERSION@ to $VERSION and 
	@RELEASE@ to $RELEASE.
	* doc/msys/MSYS_LICENSE.rtf: Change version to @VERSION@.
	* doc/msys/MSYS_WELCOME.rtf: Ditto.
	* doc/msys/README.rtf: Ditto.  Also, remove change history past version
	1.0.6 and explain where to find it.
	* doc/msys/MSYS-1.0.8-changes.rtf: Use @RELEASE@.
	* script/msysrlsbld: New file.